<resources>
    <string name="app_name">Rajdoot</string>
    <string name="gujarat_no_1">ગુજરાત નુ નંબર ૧</string>
    <string name="news_app">News App</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="logintext">Login</string>
    <string name="_91">+ 91</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up">Sign-Up</string>
    <string name="follow_us">Follow Us</string>
    <string name="splashText">સાચું અને વિશ્વાસુ</string>
    <string name="appname">Rajdoot</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_a_member">Already a member</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home2">HomeActivity2</string>
</resources>