<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutLoginBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/GujaratLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gujarat_no_1"
            android:textColor="@color/yellow"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.315"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/news_app"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.81"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GujaratLogo" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LoginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutLoginBanner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logintext"
            android:textColor="@color/yellow"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/LoginText"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <LinearLayout
            android:id="@+id/mobiletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/Login"
            app:layout_constraintStart_toStartOf="parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_mobile_number"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:padding="10dp"
            android:text="@string/_91"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobiletext" />


        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/enter_mobile_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/mobiletext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/constraintLayoutotp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutotp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@id/et_mobile"
            tools:layout_editor_absoluteX="46dp"
            >


            <EditText
                android:id="@+id/otpbox1"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:textSize="20sp"
                android:padding="15dp"
                android:inputType="number"
                android:background="@drawable/edittext_border"
                android:textColor="@color/yellow"
                android:gravity="center"
                android:maxLength="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                />

            <EditText
                android:id="@+id/otpbox2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:importantForAutofill="no"
                android:textSize="20sp"
                android:padding="15dp"
                android:layout_marginStart="36dp"
                android:inputType="number"
                android:textColor="@color/yellow"
                android:gravity="center"
                android:maxLength="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/otpbox1"/>

            <EditText
                android:id="@+id/otpbox3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:importantForAutofill="no"
                android:textSize="20sp"
                android:padding="15dp"
                android:layout_marginStart="36dp"
                android:inputType="number"
                android:textColor="@color/yellow"
                android:gravity="center"
                android:maxLength="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/otpbox2"/>

            <EditText
                android:id="@+id/otpbox4"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="15dp"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:layout_marginStart="36dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/otpbox3"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/Loginbtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/logintext"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutotp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/not_a_member"
            android:textColor="@color/blue"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/Login"
            app:layout_constraintTop_toBottomOf="@id/Loginbtn" />

        <Button
            android:id="@+id/Loginsignupbtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/signup"
            android:padding="0dp"
            android:text="@string/sign_up"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/textView4"
            app:layout_constraintTop_toBottomOf="@id/Loginbtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow_us"
        android:textSize="15sp"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/logos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <Button
            android:id="@+id/buttonX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/signup"
            android:drawableLeft="@drawable/x"
            android:drawablePadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/buttoninsta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-20dp"
            android:background="@drawable/signup"
            android:drawableLeft="@drawable/instagram"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonX"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>